fix z-index

--- a/sass/page.scss
+++ b/sass/page.scss
@@ -4,7 +4,7 @@ $size: 80px;
 .fencing {
   &-section-devider {
     position: relative;
-    z-index: 2;
+    z-index: 3;
     &.section-mirror {
       & + section,
       & + .wp-block-columns,
