--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 .fencing-section-devider {
   position: relative;
-  z-index: 2;
+  z-index: 3;
 }
 .fencing-section-devider.section-mirror + section, .fencing-section-devider.section-mirror + .wp-block-columns, .fencing-section-devider.section-mirror + .wp-block-cover {
   margin-top: -116px;
